[package]
name = "apt-swarm"
version = "0.2.0"
description = "🥸 p2p gossip network for update transparency, based on pgp 🥸"
authors = ["kpcyrd <git@rxv.cc>"]
license = "GPL-3.0-or-later"
repository = "https://github.com/kpcyrd/apt-swarm"
categories = ["command-line-utilities"]
edition = "2021"

[dependencies]
anyhow = "1.0.68"
async-trait = "0.1.64"
bstr = { version = "1.2.0", features = ["serde"] }
bytes = "1.4.0"
clap = { version = "4.0.32", features = ["derive", "env"] }
clap_complete = "4.0.7"
colored = "2.0.0"
dirs = "5"
env_logger = "0.10.0"
fastrand = "1.9.0"
futures = "0.3.26"
getrandom = "0.2.8"
gix = "0.43"
gix-object = "0.28"
heed = "0.20.0-alpha.0"
hex = "0.4.3"
indexmap = "1.9.2"
ipnetwork = "0.20.0"
irc = { version = "0.15.0", default-features = false, features = ["tls-rust"] }
lazy_static = "1.4.0"
log = "0.4.17"
lru = "0.10"
memchr = "2.5.0"
nix = "0.26.2"
num-format = "0.4.4"
reqwest = { version = "0.11.13", features = ["rustls-tls", "socks"], default-features = false }
sequoia-openpgp = "1.12.0"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.92"
sha2 = "0.10.6"
sled = { version = "0.34.7", features = ["compression"] }
socket2 = "0.5"
tokio = { version = "1.23.0", features = ["macros", "rt-multi-thread", "io-util", "io-std", "fs", "process", "net"] }
tokio-socks = "0.5.1"
toml = "0.7.1"

[dev-dependencies]
tempfile = "3.4.0"
