[package]
name = "apt-swarm"
version = "0.5.0"
description = "🥸 Experimental p2p gossip network for OpenPGP signature transparency 🥸"
authors = ["kpcyrd <git@rxv.cc>"]
license = "GPL-3.0-or-later"
repository = "https://github.com/kpcyrd/apt-swarm"
categories = ["command-line-utilities"]
edition = "2021"

[workspace]
members = ["fuzz"]

# https://github.com/rust-fuzz/cargo-fuzz/issues/372
[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(fuzzing)'] }

[features]
default = ["git", "irc"]
git = ["gix", "gix-object"]

[dependencies]
advisory-lock = "0.3.0"
anyhow = "1.0.68"
async-stream = "0.3"
async-trait = "0.1.64"
bstr = { version = "1.2.0", features = ["serde"] }
bytes = "1.4.0"
# we don't use bzip2 directly, but enable the libbz2-rs-sys feature
bzip2 = { version = "0.5.1", features = ["libbz2-rs-sys"] }
chrono = { version = "0.4", default-features = false, features = ["serde", "now"] }
clap = { version = "4.0.32", features = ["derive", "env"] }
clap_complete = "4.0.7"
colored = "3"
dirs = "6"
env_logger = "0.11"
fastrand = "2"
futures = "0.3.26"
getrandom = "0.3"
gix = { version = "0.70", optional = true }
gix-object = { version = "0.47", optional = true }
hex = "0.4.3"
indexmap = "2"
ipnetwork = "0.21"
irc = { version = "1", optional = true, default-features = false, features = ["tls-rust"] }
log = "0.4.17"
lru = "0.13"
lz4_flex = "0.11.3"
memchr = "2.5.0"
num-format = "0.4"
reqwest = { version = "0.12", features = ["rustls-tls", "socks", "stream"], default-features = false }
sequoia-openpgp = { version = "1.21", default-features = false, features = ["compression", "crypto-rust", "allow-experimental-crypto", "allow-variable-time-crypto"] }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.92"
sha2 = "0.10.6"
socket2 = "0.5"
tokio = { version = "1.23.0", features = ["macros", "rt-multi-thread", "io-util", "io-std", "fs", "process", "net"] }
tokio-socks = "0.5.1"
toml = "0.8"
url = "2.5"

[target.'cfg(target_os = "openbsd")'.dependencies]
pledge = "0.4.2"

[dev-dependencies]
tempfile = "3.4.0"
