[package]
name = "apt-swarm-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
bstr = "1.3.0"
lazy_static = "1.4.0"

[dependencies.apt-swarm]
path = ".."

# Prevent this from interfering with workspaces
[workspace]
members = ["."]

[profile.release]
debug = 1

[[bin]]
name = "decanonicalize"
path = "fuzz_targets/decanonicalize.rs"
test = false
doc = false

[[bin]]
name = "sequoia-parser"
path = "fuzz_targets/sequoia-parser.rs"
test = false
doc = false
